--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-<title>Home::DBarbarossa</title>
+<title>D. Barbarossa :: Home</title>
 <link rel=stylesheet type="text/css" href="style.css"></head>
 <body>
 
