--- a/drums.html
+++ b/drums.html
@@ -1,7 +1,7 @@
 </html> <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-<title>D. Barbarossa</title>
+<title>D. Barbarossa :: Drums!</title>
 <link rel=stylesheet type="text/css" href="style.css"></head>
 <body>
 
