--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-<title>CV::DBarbarossa</title>
+<title>D. Barbarossa :: CV</title>
 <link rel=stylesheet type="text/css" href="style.css"></head>
 <body>
 
@@ -66,7 +66,7 @@ with supervisors: <a href="https://lipn.univ-paris13.fr/~gmanzonetto/">Giulio Ma
 
 <hr size=3>
 
-<table cellspacing="8" cellpadding="2" border="0" align="center">
+    <table cellspacing="2" cellpadding="10" border="0" align="center">
    <tr>
      <td align="center"><br><h3><a href="index.html">Home</a></h3></td>
      <td align="center"><br><h3><a href="research.html">Research</a></h3></td>
