--- a/drums.html
+++ b/drums.html
@@ -38,9 +38,10 @@
 
 <hr size=3>
 
-<table cellspacing="8" cellpadding="2" border="0" align="center">
+<table cellspacing="2" cellpadding="10" border="0" align="center">
    <tr>
      <td align="center"><br><h3><a href="index.html">Home</a></h3></td>
+     <td align="center"><br><h3><a href="cv.html">CV</a></h3></td>
      <td align="center"><br><h3><a href="research.html">Research</a></h3></td>
      <td align="center"><br><h3><a href="teaching.html">Teaching</a></h3></td>
    </tr>
