--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Since 01/2024, I am a post-doctoral <strong>Research Associate</strong> in the <
 
 <table cellspacing="2" cellpadding="10" border="0" align="center">
    <tr>
+     <td align="center"><br><h3><a href="index.html">Home</a></h3></td>
      <td align="center"><br><h3><a href="cv.html">CV</a></h3></td>
      <td align="center"><br><h3><a href="research.html">Research</a></h3></td>
      <td align="center"><br><h3><a href="teaching.html">Teaching</a></h3></td>
