--- a/cv.html
+++ b/cv.html
@@ -66,9 +66,10 @@ with supervisors: <a href="https://lipn.univ-paris13.fr/~gmanzonetto/">Giulio Ma
 
 <hr size=3>
 
-    <table cellspacing="2" cellpadding="10" border="0" align="center">
+<table cellspacing="2" cellpadding="10" border="0" align="center">
    <tr>
      <td align="center"><br><h3><a href="index.html">Home</a></h3></td>
+     <td align="center"><br><h3><a href="cv.html">CV</a></h3></td>
      <td align="center"><br><h3><a href="research.html">Research</a></h3></td>
      <td align="center"><br><h3><a href="teaching.html">Teaching</a></h3></td>
    </tr>
