--- a/research.html
+++ b/research.html
@@ -70,10 +70,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
    <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: soon on arxiv)<br>
 	Davide Barbarossa and Paolo Pistone<br>
 	32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
-   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="bibtex.html#BarbarossaLICS22">(bib)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="https://dl.acm.org/doi/10.1145/3531130.3532469">(PDF)</a> <a href="bibtex.html#BarbarossaLICS22">(bib)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
         Davide Barbarossa<br>
         36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
-   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="./papers/BarbarossaM20.pdf">(PDF)</a> <a href="bibtex.html#BarbarossaM20">(bib)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> <a href="bibtex.html#BarbarossaM20">(bib)</a> (long version: see my PhD thesis)<br>
 	Davide Barbarossa and Giulio Manzonetto<br>
 	Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
  	<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
@@ -93,7 +93,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <li>2022, Caserta (Italy), XXVII Incontro of Associazione Italiana di Logica e sue Applicazioni (AILA):
     <i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a><br><br>
 <li>2022, Ha&iuml;fa (Israel), Trends in Linear Logic and Applications (TLLA):
-    <i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a><br><br>
+    <i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a> <br><br>
 <li>2019, Pavia (Italy), XXI Congresso Unione Matematica Italiana:
     <i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(slides - italian)</a><br><br>
 <li>2019, Dortmund (Germany), Trends in Linear Logic and Applications (TLLA):
@@ -107,7 +107,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <ul>
 	<li>
 		<b>PhD:</b>
-		<a href="https://lipn.univ-paris13.fr/~barbarossa/phdThesis.pdf"><i> Towards a resource based approximation theory of programs.</i></a>.
+		<a href="https://theses.hal.science/tel-03886068v1"><i> Towards a resource based approximation theory of programs.</i></a> <a href="bibtex.html#BarbarossaPhD">(bib)</a>.
 		<br>You can also look at the <a href="https://lipn.univ-paris13.fr/~barbarossa/phdTransparents.pdf">slides</a> of the defence.
 		<br>Main topics: <i>&#955;-calculus, &#955;&#956;-calculus, Taylor expansion and resources approximation</i><br>.
 	<li>
@@ -126,7 +126,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Drafts (no peer review)</h3>
 <br>
-<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a><br><br>
+<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
 
 <hr size=3>
 
