--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@ La math&eacute;matique est l'art de donner le m&ecirc;me nom &agrave; des choses
 <p>
 <h3>Academic Interests</h3>
 I study computation from a mathematical point of view, and mathematics from a computational one.
-<br>In particular, I do research at the <a href="researchDiagram.jpg">intersection</a> between <strong> programming languages theory</strong> and <strong>mathematical logic</strong>.
+<br>In particular, I do research at the <a href="./researchDiagram.jpg">intersection</a> between <strong> programming languages theory</strong> and <strong>mathematical logic</strong>.
 <p>
 More specifically, I am usually working within the following <a href="https://www.college-de-france.fr/fr/audiovisuel?f%5B0%5D=chair%3A3562&f%5B1%5D=dates%3Amin%3D2018-11-15%7Cmax%3D2019-03-17">Curry-Howard-Lambek</a>'ish topics:
 <p>
@@ -135,7 +135,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <br>
 <li>2023, Journ&eacute;e interdisciplinaire ``Logique, Langage et Computation'' (Lyon, France): <i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a><br><br>
 <li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i><br><br>
-<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France): <i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL">(slides)</a><br><br>
+<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France): <i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL.pdf">(slides)</a><br><br>
 <li>2022, Universit&eacute; Paris Cit&eacute; (France), Institut de Recherche en Informatique Fondamentale (IRIF): <i>&lambda;-calculus goes to the tropics</i> (on blackboard)<br><br>
 <li>2021, ENS de Lyon (France) (Video Conference due to Covid19), Laboratoire de l'Informatique du Parall&eacute;lismse (LIP): <i>Le &lambda;&mu;-calcul avec ressources, et des applications</i> <a href="./seminars/LambdaMuTaylor.pdf"> (slides_english)</a><br><br>
 <li>2020, Universit&agrave di Bologna (Italy) (Video Conference due to Covid19), Dipartmento di Informatica (DIAPASoN group): <i>The resource &lambda;&mu;-calculus, and applications</i><br><br>
