--- a/research.html
+++ b/research.html
@@ -108,13 +108,13 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	<li>
 		<b>PhD:</b>
 		<a href="https://theses.hal.science/tel-03886068v1"><i> Towards a resource based approximation theory of programs.</i></a> <a href="bibtex.html#BarbarossaPhD">(bib)</a>.
-		<br>You can also look at the <a href="https://lipn.univ-paris13.fr/~barbarossa/phdTransparents.pdf">slides</a> of the defence.
+		<br>You can also look at the <a href="./seminars/phdTransparents.pdf">slides</a> of the defence.
 		<br>Main topics: <i>&#955;-calculus, &#955;&#956;-calculus, Taylor expansion and resources approximation</i><br>.
 	<li>
 		<b>Master:</b>
 		<a href="https://lipn.univ-paris13.fr/~barbarossa/TesiBarbarossaMagistrale.pdf"><i>On the computational content of proofs</i></a>.
 		<br>This is the English version for the Italian defence, which contains the content of the French version.
-		<br>You can also look at the <a href="https://lipn.univ-paris13.fr/~barbarossa/M2transparents.pdf">slides</a> of the defence (in their French version for the French defence).
+		<br>You can also look at the <a href="./seminars/M2transparents.pdf">slides</a> of the defence (in their French version for the French defence).
 		<br>Main topics: <i>Curry-Howard correspondence, Krivine's classical realisability</i>.
 </ul>
 </p>
