--- a/research.html
+++ b/research.html
@@ -132,7 +132,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Seminars</h3>
 <br>
-<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK): <i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/séminaire_SMLS.pdf">(slides)</a><br><br>
+<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK): <i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/seminar_SMLS.pdf">(slides)</a><br><br>
+<li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i><br><br>
 <li>2023, Journ&eacute;e interdisciplinaire ``Logique, Langage et Computation'' (Lyon, France): <i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a><br><br>
 <li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i><br><br>
 <li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France): <i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL.pdf">(slides)</a><br><br>
