--- a/research.html
+++ b/research.html
@@ -85,6 +85,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <p><h3>Workshops, Congress Communications (with peer review)</h3>
 <br>
+<li>2024, Tallinn (Estonia), 8th International Workshop on Trends in Linear Logic and Applications (TLLA):
+	<i>Stability property for the Call-by-Value &#955;-calculus through Taylor expansion</i>
+	<a href="./seminars/TLLA24.pdf">(slides)</a> <a href="./papers/TLLA24.pdf">(long abstract)</a>
+	<br><br></li>
 <li>2023, Palermo (Italy), 24th Italian Conference on Theoretical Computer Science (ICTCS):
     <i>Tropical Mathematics and the &#955;-calculus</i> <a href="./seminars/ICTCS23.pdf">(slides)</a> <a href="./papers/ICTCS23.pdf">(long abstract)<a><br><br>
 <li>2023, Roma (Italy), Trends in Linear Logic and Applications (TLLA):
