--- a/research.html
+++ b/research.html
@@ -91,15 +91,15 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	<br><br></li>
 <li>2023, Palermo (Italy), 24th Italian Conference on Theoretical Computer Science (ICTCS):
     <i>Tropical Mathematics and the &#955;-calculus</i> <a href="./seminars/ICTCS23.pdf">(slides)</a> <a href="./papers/ICTCS23.pdf">(long abstract)<a><br><br>
-<li>2023, Roma (Italy), Trends in Linear Logic and Applications (TLLA):
+<li>2023, Roma (Italy), 7th International Workshop on Trends in Linear Logic and Applications (TLLA):
     <i>Tropical Mathematics and Linearity in &#955;-calculus</i> <a href="./seminars/TLLA23.pdf">(slides)</a><br><br>
 <li>2022, Caserta (Italy), XXVII Incontro of Associazione Italiana di Logica e sue Applicazioni (AILA):
     <i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a><br><br>
-<li>2022, Ha&iuml;fa (Israel), Trends in Linear Logic and Applications (TLLA):
+<li>2022, Ha&iuml;fa (Israel), Joint 7th International Workshop on Linearity and 6th International Workshop on Trends in Linear Logic and Applications (TLLA):
     <i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a> <br><br>
 <li>2019, Pavia (Italy), XXI Congresso Unione Matematica Italiana:
     <i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(slides - italian)</a><br><br>
-<li>2019, Dortmund (Germany), Trends in Linear Logic and Applications (TLLA):
+<li>2019, Dortmund (Germany), 3rd International Workshop on Trends in Linear Logic and Applications (TLLA):
     <i>On the power of Taylor Expansion.</i><br><br>
 
 <hr size=3>
