--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <hr size=3>
 
 <p>
-<h3>Conference and Journal papers (with peer review)</h3>
+<h3>Conference and Journal Papers (with peer review)</h3>
 <br>
 <ul>
    <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: soon on arxiv)<br>
@@ -90,17 +90,26 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	<a href="./seminars/TLLA24.pdf">(slides)</a> <a href="./papers/TLLA24.pdf">(long abstract)</a>
 	<br><br></li>
 <li>2023, Palermo (Italy), 24th Italian Conference on Theoretical Computer Science (ICTCS):
-    <i>Tropical Mathematics and the &#955;-calculus</i> <a href="./seminars/ICTCS23.pdf">(slides)</a> <a href="./papers/ICTCS23.pdf">(long abstract)<a><br><br>
+	<i>Tropical Mathematics and the &#955;-calculus</i> <a href="./seminars/ICTCS23.pdf">(slides)</a> <a href="./papers/ICTCS23.pdf">(long abstract)<a>
+	<br><br></li>
+<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France):
+	<i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL.pdf">(slides)</a>
+	<br><br></li>
 <li>2023, Roma (Italy), 7th International Workshop on Trends in Linear Logic and Applications (TLLA):
-    <i>Tropical Mathematics and Linearity in &#955;-calculus</i> <a href="./seminars/TLLA23.pdf">(slides)</a><br><br>
+    	<i>Tropical Mathematics and Linearity in &#955;-calculus</i> <a href="./seminars/TLLA23.pdf">(slides)</a>
+	<br><br></li>
 <li>2022, Caserta (Italy), XXVII Incontro of Associazione Italiana di Logica e sue Applicazioni (AILA):
-    <i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a><br><br>
+    	<i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a>
+	<br><br></li>
 <li>2022, Ha&iuml;fa (Israel), Joint 7th International Workshop on Linearity and 6th International Workshop on Trends in Linear Logic and Applications (TLLA):
-    <i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a> <br><br>
+    	<i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a>
+	<br><br></li>
 <li>2019, Pavia (Italy), XXI Congresso Unione Matematica Italiana:
-    <i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(slides - italian)</a><br><br>
+    	<i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(slides - italian)</a>
+	<br><br></li>
 <li>2019, Dortmund (Germany), 3rd International Workshop on Trends in Linear Logic and Applications (TLLA):
-    <i>On the power of Taylor Expansion.</i><br><br>
+    	<i>On the power of Taylor Expansion.</i>
+	<br><br></li>
 
 <hr size=3>
 
@@ -131,16 +140,37 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <br>
 <li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
 
+	
 <hr size=3>
 
+	
 <p>
-<h3>Seminars</h3>
+<h3>Invited Seminars and Tutorials at International and National Academic Events</h3>
 <br>
-<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK): <i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a><br><br>
+<li>2024, 8th International Workshop on Trends in Linear Logic and Applications "TLLA" (Tallinn, Estonia)<br>
+	Tutorial:
+	<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
+	<br>
+	<small><small><small><i>
+	Abstract:
+	In this tutorial, we will study the notion of approximation for the lambda-calculus.
+	After having introduced the topic, we will focus on the so-called "resource approximation" and use it in order to prove the Continuity Lemma for the lambda-calculus.
+	We will then see how this approximation technique is actually related to the notion of differentiation in the lambda-calculus on the one hand, and how it provides an abstraction of the usual notion of differentiation from mathematical analysis on the other hand, by looking (time permitting) at its categorical formulation.</i>
+	</small></small></small><br><br></li>
+<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
+	Seminar:
+	<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
+	<br><br></li>
+<li>2023, Journ&eacute;e interdisciplinaire ``Logique, Langage et Computation'' (Lyon, France)<br>
+	Seminar:
+	<i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a>.
+	<br><br></li>
+
+<p>
+<h3>Invited Research Seminars</h3>
+<br>
 <li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i><br><br>
-<li>2023, Journ&eacute;e interdisciplinaire ``Logique, Langage et Computation'' (Lyon, France): <i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a><br><br>
 <li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i><br><br>
-<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France): <i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL.pdf">(slides)</a><br><br>
 <li>2022, Universit&eacute; Paris Cit&eacute; (France), Institut de Recherche en Informatique Fondamentale (IRIF): <i>&lambda;-calculus goes to the tropics</i> (on blackboard)<br><br>
 <li>2021, ENS de Lyon (France) (Video Conference due to Covid19), Laboratoire de l'Informatique du Parall&eacute;lismse (LIP): <i>Le &lambda;&mu;-calcul avec ressources, et des applications</i> <a href="./seminars/LambdaMuTaylor.pdf"> (slides_english)</a><br><br>
 <li>2020, Universit&agrave di Bologna (Italy) (Video Conference due to Covid19), Dipartmento di Informatica (DIAPASoN group): <i>The resource &lambda;&mu;-calculus, and applications</i><br><br>
@@ -151,7 +181,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <hr size=3>
 
-
+<!--
+	
 <p>
 <h3>Other attended events</h3>
 
@@ -173,6 +204,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <hr size=3>
 
+-->
+
 <hr size=3>
 
 <table cellspacing="2" cellpadding="10" border="0" align="center">
@@ -183,7 +216,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
      <td align="center"><br><h3><a href="teaching.html">Teaching</a></h3></td>
    </tr>
 </table>
-
+	
+	
 <hr size=3>
 
 <p align="center">
