--- a/research.html
+++ b/research.html
@@ -92,11 +92,11 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <li>2023, Palermo (Italy), 24th Italian Conference on Theoretical Computer Science (ICTCS):
 	<i>Tropical Mathematics and the &#955;-calculus</i> <a href="./seminars/ICTCS23.pdf">(slides)</a> <a href="./papers/ICTCS23.pdf">(long abstract)<a>
 	<br><br></li>
-<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France):
-	<i>&lambda;-calculus goes to the tropics</i> <a href="./seminars/tropicalLREL.pdf">(slides)</a>
-	<br><br></li>
 <li>2023, Roma (Italy), 7th International Workshop on Trends in Linear Logic and Applications (TLLA):
     	<i>Tropical Mathematics and Linearity in &#955;-calculus</i> <a href="./seminars/TLLA23.pdf">(slides)</a>
+	<br><br></li>
+<li>2023, Journ&eacute;es d'hiver du GT Scalp (CIRM, France):
+	<i>&lambda;-calculus goes to the tropics</i><!-- <a href="./seminars/tropicalLREL.pdf">(slides)</a> -->
 	<br><br></li>
 <li>2022, Caserta (Italy), XXVII Incontro of Associazione Italiana di Logica e sue Applicazioni (AILA):
     	<i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a>
@@ -105,7 +105,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
     	<i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a>
 	<br><br></li>
 <li>2019, Pavia (Italy), XXI Congresso Unione Matematica Italiana:
-    	<i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(slides - italian)</a>
+    	<i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(lucidi)</a>
 	<br><br></li>
 <li>2019, Dortmund (Germany), 3rd International Workshop on Trends in Linear Logic and Applications (TLLA):
     	<i>On the power of Taylor Expansion.</i>
@@ -176,7 +176,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <li>2020, Universit&agrave di Bologna (Italy) (Video Conference due to Covid19), Dipartmento di Informatica (DIAPASoN group): <i>The resource &lambda;&mu;-calculus, and applications</i><br><br>
 <li>2020, University of Bath (UK) (Video Conference due to Covid19), Department of Computer Science: <i>Approximating functional programs: Taylor subsumes Scott, Berry, Kahn and Plotkin</i> <a href="./seminars/TaylorSubsumesBath2020.pdf">(slides)</a><br><br>
 <li>2020, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>Approximations partielles et approximation par ressources en &#955;-calcul</i> (on blackboard)<br><br>
-<li>2018, Universit&agrave; Roma Tre (Italy), Dipartimento di Matematica e Fisica: <i>Realizzabilit&agrave; classica ed ultrafiltri su N</i> <a href="./seminars/RomaTre2018.pdf">(slides_italian)</a>.<br><br>
+<li>2018, Universit&agrave; Roma Tre (Italy), Dipartimento di Matematica e Fisica: <i>Realizzabilit&agrave; classica ed ultrafiltri su N</i> <a href="./seminars/RomaTre2018.pdf">(lucidi)</a>.<br><br>
 
 
 <hr size=3>
