--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
    <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="https://dl.acm.org/doi/10.1145/3531130.3532469">(PDF)</a> <a href="bibtex.html#BarbarossaLICS22">(bib)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
         Davide Barbarossa<br>
         36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
-   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> <a href="bibtex.html#BarbarossaM20">(bib)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="bibtex.html#BarbarossaM20">(bib)</a> (long version: see my PhD thesis)<br>
 	Davide Barbarossa and Giulio Manzonetto<br>
 	Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
  	<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
