--- a/research.html
+++ b/research.html
@@ -80,6 +80,9 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 </ul>
 
 
+<hr size=3>
+
+	
 <p>
 <h3>Invited Seminars and Tutorials at International and National Academic Events</h3>
 <ul>
