--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <hr size=3>
 
 <p><h4>Currently, the following thoughts fill my mind...</h4>
-<li> Dialectica, reversed differentiation, differential &#955;-calculus and differential geometry </li>
+<li> Dialectica transformation and categories for differential geometry/&#955;-calculus </li>
 <li> Tropical models of differential &#955;-calculus </li>
 <li> What is an approximation of a programming language? </li>
 </p>
