--- a/drums.html
+++ b/drums.html
@@ -32,6 +32,8 @@
     <li>
            <a href="https://www.youtube.com/watch?v=IOb8otk7Y0U">John Bonham</a><br><br>
     <li>
+           <a href="https://www.youtube.com/watch?v=-eaIvh6ELVg">Gene Hoglan</a><br><br>
+    <li>
            <a href="https://www.youtube.com/watch?v=4TXxmiIP5g8">The Do.</a>
 </ul>   
 </p>
