--- a/research.html
+++ b/research.html
@@ -91,10 +91,16 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
 	<br><br>
 	<small><i>
-	Abstract:
-	In this tutorial, we will study the notion of approximation for the lambda-calculus.
-	After having introduced the topic, we will focus on the so-called "resource approximation" and use it in order to prove the Continuity Lemma for the lambda-calculus.
-	We will then see how this approximation technique is actually related to the notion of differentiation in the lambda-calculus on the one hand, and how it provides an abstraction of the usual notion of differentiation from mathematical analysis on the other hand, by looking (time permitting) at its categorical formulation.</i>
+		<details>
+		  <summary>
+		  Abstract
+		  </summary>
+		  <p>
+			In this tutorial, we will study the notion of approximation for the lambda-calculus.
+			After having introduced the topic, we will focus on the so-called "resource approximation" and use it in order to prove the Continuity Lemma for the lambda-calculus.
+			We will then see how this approximation technique is actually related to the notion of differentiation in the lambda-calculus on the one hand, and how it provides an abstraction of the usual notion of differentiation from mathematical analysis on the other hand, by looking (time permitting) at its categorical formulation.</i>
+		  </p>
+		  </details>
 	</small><br><br></li>
 <li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
 	Seminar:
