--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 			We will then see how this approximation technique is actually related to the notion of differentiation in the lambda-calculus on the one hand, and how it provides an abstraction of the usual notion of differentiation from mathematical analysis on the other hand, by looking (time permitting) at its categorical formulation.</i>
 		  </p>
 		  </details>
-	</small><br><br></li>
+	</small><br></li>
 <li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
 	Seminar:
 	<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
