--- a/teaching.html
+++ b/teaching.html
@@ -18,6 +18,16 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 
 <br>
 <ul>
+<li>2024: Tutor -- University of Bath
+	<ul>
+		MCs in Computer Science
+		<ul>
+			<li>
+				Foundations of Computation
+			</li>
+		</ul>
+	</ul>
+</li>
 <li>2023-2024: Tutor didattico -- Universit&agrave; di Bologna</p>
 	<ul>
                 <li>Corso di laurea in Informatica</p>
@@ -26,6 +36,7 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
                         </ul>
                 </li>
         </ul>
+</li>
 <li>2022-2023: Professore a contratto -- Universit&agrave; di Bologna</p>
 	<ul>
 		<li>Corso di laurea in Genomics</p>
