--- a/teaching.html
+++ b/teaching.html
@@ -18,15 +18,14 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 
 <br>
 <ul>
-<li>2024: Tutor -- University of Bath
+<li>2024: Tutor -- University of Bath</p>
 	<ul>
-		MCs in Computer Science
-		<ul>
-			<li>
-				Foundations of Computation
-			</li>
-		</ul>
-	</ul>
+                <li>MCs in Computer Science</p>
+                        <ul>
+                                <li>Foundations of Computation</p>
+                        </ul>
+                </li>
+        </ul>
 </li>
 <li>2023-2024: Tutor didattico -- Universit&agrave; di Bologna</p>
 	<ul>
