--- a/teaching.html
+++ b/teaching.html
@@ -20,7 +20,7 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 <ul>
 <li>2024: Tutor -- University of Bath</p>
 	<ul>
-                <li>MCs in Computer Science</p>
+                <li>MSc in Computer Science</p>
                         <ul>
                                 <li>Foundations of Computation</p>
                         </ul>
