--- a/research.html
+++ b/research.html
@@ -172,6 +172,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	<li>
 		<b>PhD:</b>
 		<a href="https://theses.hal.science/tel-03886068v1"><i> Towards a resource based approximation theory of programs.</i></a> <a href="bibtex.html#BarbarossaPhD">(bib)</a>.
+		<br>There is an <a href="./papers/erratacorrige_phd.pdf">Errata Corrige</a>: it's about small details, but especially if you are reading Section 3.5 you would want to have a look at it.
 		<br>You can also look at the <a href="./seminars/phdTransparents.pdf">slides</a> of the defence.
 		<br>Main topics: <i>&#955;-calculus, &#955;&#956;-calculus, Taylor expansion and resources approximation</i><br>.
 	<li>
