--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Depuis les Grecs qui dit math&eacute;matique dit d&eacute;monstration.
       		<br>(not to be confused with drummer <a href="https://en.wikipedia.org/wiki/David_Barbarossa">David Barbarossa</a>,<br> even though I also love <a href="drums.html">drums</a>)</br>
       		<br>Born on 12/10/1994 in Rome (Italy)
       		<br>Natural languages: Italian, French, English
-      		<br>Artificial languages: Assembly, C, Coq , Java, Python, Shell Unix
+      		<br>Artificial languages: Assembly, C, Coq , Java, Matita, Python, Shell Unix
 		</td>
 		<td style="width:35%" align=center>
 		<figure>
