--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@ La math&eacute;matique est l'art de donner le m&ecirc;me nom &agrave; des choses
 <p>
 <h3>Academic Interests</h3>
 I study computation from a mathematical point of view, and mathematics from a computational one.
-<br>In particular, I do research at the <a href="./researchDiagram.jpg">intersection</a> between <strong> programming languages theory</strong> and <strong>mathematical logic</strong>.
+<br>In particular, I do research at the <a href="./researchDiagram.jpg">intersection</a> between <strong> programming language theory</strong> and <strong>mathematical logic</strong>.
 <p>
 More specifically, I am usually working within the following <a href="https://www.college-de-france.fr/fr/audiovisuel?f%5B0%5D=chair%3A3562&f%5B1%5D=dates%3Amin%3D2018-11-15%7Cmax%3D2019-03-17">Curry-Howard-Lambek</a>'ish topics:
 <p>
