--- a/research.html
+++ b/research.html
@@ -191,7 +191,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Drafts (no peer review)</h3>
 <ul>
-<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
+	<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
+	<li><i>On Dialectica and Differentiation, via Categories</i> <a href="./papers/dialVSdiff.pdf">(pdf)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 </ul>
 
 </p>
