--- a/teaching.html
+++ b/teaching.html
@@ -18,49 +18,61 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 
 <br>
 <ul>
-<li>2024: Tutor -- University of Bath</p>
-	<ul>
-                <li>MSc in Computer Science</p>
-                        <ul>
-                                <li>Foundations of Computation</p>
-                        </ul>
-                </li>
-        </ul>
-</li>
-<li>2023-2024: Tutor didattico -- Universit&agrave; di Bologna</p>
-	<ul>
-                <li>Corso di laurea in Informatica</p>
-                        <ul>
-                                <li><a href="https://www.unibo.it/it/didattica/insegnamenti/insegnamento/2023/455095">Logica per l'informatica</a></p>
-                        </ul>
-                </li>
-        </ul>
-</li>
-<li>2022-2023: Professore a contratto -- Universit&agrave; di Bologna</p>
-	<ul>
-		<li>Corso di laurea in Genomics</p>
-			<ul>
-				<li><a href="./Enseignements/2022-23/netsecdbs/moduleII.html">Networks, Security and Databases</a> - Coresponsable, together with <a href="https://www.pfelli.xyz/">Paolo Felli</a>
-				<br> (I am the responsable of Module 2: Elements of Complexity, Cryptography, Machine Learning)</p>
-			</ul>
-		</li>
-	</ul>
-<li>2019-2021: Moniteur -- IUT de Villetaneuse, Universit&eacute; Sorbonne Paris Nord</p>
-    <ul>
-    <li>2020/21: DUT D&eacute;partement R&eacute;seaux.</p> 
-        <ul>
-        <li><a href=./Enseignements/2020-21/AdminSyst&egrave;mes/admin_syst&egrave;mes.html>Bases des syst&egrave;mes d'exploitation (GNU/Linux)</a> - TD/TP
-        <li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP
-        </ul></p>
-    <li>2019/20: DUT D&eacute;partement Informatique.</p>
-        <ul>
-        <li><a href=https://www-info.iutv.univ-paris13.fr/~butelle/Polys/M2102>Architecture des r&eacute;seaux</a> - TD/TP
-        <li>Architecture et programmation bas niveau (Portes logiques, Assembleur, C)- TD/TP
-        <li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;
-        </ul></p>
-    </ul>
+	<li>2025: Teacher at <a href="https://2025.esslli.eu/courses-workshops-accepted.html">ESSLLI Summer School</a>
+		<ul>
+			<li>Category: ``Logic and Computation'', Level: ``Advanced Course''
+				<ul>
+					<li>The Lambda-Calculus, from Minimal to Classical Logic -- Together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
+					<br>More information to come in the next months
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li>2024: Tutor -- University of Bath</p>
+		<ul>
+        	        <li>MSc in Computer Science</p>
+       	                	<ul>
+                                	<li><a href="https://moodle.bath.ac.uk/">Foundations of Computation<</a></p>
+                        	</ul>
+                	</li>
+        	</ul>
+	</li>
+	<li>2023-2024: Tutor didattico -- Universit&agrave; di Bologna</p>
+		<ul>
+                	<li>Corso di laurea in Informatica</p>
+                        	<ul>
+                                	<li><a href="https://www.unibo.it/it/didattica/insegnamenti/insegnamento/2023/455095">Logica per l'informatica</a></p>
+                        	</ul>
+                	</li>
+        	</ul>
+	</li>
+	<li>2022-2023: Professore a contratto -- Universit&agrave; di Bologna</p>
+		<ul>
+			<li>Corso di laurea in Genomics</p>
+				<ul>
+					<li><a href="./Enseignements/2022-23/netsecdbs/moduleII.html">Networks, Security and Databases</a> - Coresponsable, together with <a href="https://www.pfelli.xyz/">Paolo Felli</a>
+					<br> (I am the responsable of Module 2: Elements of Complexity, Cryptography, Machine Learning)</p>
+				</ul>
+			</li>
+		</ul>
+	<li>2019-2021: Moniteur -- IUT de Villetaneuse, Universit&eacute; Sorbonne Paris Nord</p>
+    		<ul>
+    			<li>2020/21: DUT D&eacute;partement R&eacute;seaux.</p> 
+        			<ul>
+        				<li><a href=./Enseignements/2020-21/AdminSyst&egrave;mes/admin_syst&egrave;mes.html>Bases des syst&egrave;mes d'exploitation (GNU/Linux)</a> - TD/TP
+        				<li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP
+        			</ul>
+			</li>
+    			<li>2019/20: DUT D&eacute;partement Informatique.</p>
+        			<ul>
+        				<li><a href=https://www-info.iutv.univ-paris13.fr/~butelle/Polys/M2102>Architecture des r&eacute;seaux</a> - TD/TP
+        				<li>Architecture et programmation bas niveau (Portes logiques, Assembleur, C)- TD/TP
+        				<li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;
+        			</ul>
+			</li>
+    		</ul>
+	</li>
 </ul>
-</br>
 
 <hr size=3>
 
